[gd_scene load_steps=2 format=3 uid="uid://bov3gfkl3iskb"]

[ext_resource type="Script" path="res://scenes/ui/editor.gd" id="1_lej75"]

[node name="Editor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lej75")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -106.0
offset_right = 185.0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TerrainSelection" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="GrassButton" type="Button" parent="PanelContainer/MarginContainer/TerrainSelection"]
layout_mode = 2
text = "Grassland"

[node name="SeaButton" type="Button" parent="PanelContainer/MarginContainer/TerrainSelection"]
layout_mode = 2
text = "Sea"

[node name="OceanButton" type="Button" parent="PanelContainer/MarginContainer/TerrainSelection"]
layout_mode = 2
text = "Ocean"

[node name="ForestButton" type="Button" parent="PanelContainer/MarginContainer/TerrainSelection"]
layout_mode = 2
text = "Forest"

[node name="MountainButton" type="Button" parent="PanelContainer/MarginContainer/TerrainSelection"]
layout_mode = 2
text = "Mountain"

[node name="SnowButton" type="Button" parent="PanelContainer/MarginContainer/TerrainSelection"]
layout_mode = 2
text = "Snow"

[connection signal="pressed" from="PanelContainer/MarginContainer/TerrainSelection/GrassButton" to="." method="_on_grass_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/TerrainSelection/SeaButton" to="." method="_on_sea_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/TerrainSelection/OceanButton" to="." method="_on_ocean_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/TerrainSelection/ForestButton" to="." method="_on_forest_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/TerrainSelection/MountainButton" to="." method="_on_mountain_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/TerrainSelection/SnowButton" to="." method="_on_snow_button_pressed"]
